--- a/index.html
+++ b/index.html
@@ -5,27 +5,40 @@
 	<meta charset="UTF-8">
 	<title>Barber Borodinsky</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=cyrillic-ext,cyrillic">
 </head>
 
 <body>
 	<div class="header">
 		<div class="layout-center-wrapper">
 			<ul class="top-menu">
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Информация</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="#">Прайс-лист</a></li>
-				<li><a href="#">Магазин</a></li>
-				<li><a href="#">Контакты</a></li>
+				<li><a href="#">Главная</a>
+				</li>
+				<li><a class="active" href="#">Информация</a>
+				</li>
+				<li><a href="#">Новости</a>
+				</li>
+				<li><a href="#">Прайс-лист</a>
+				</li>
+				<li><a href="#">Магазин</a>
+				</li>
+				<li><a href="#">Контакты</a>
+				</li>
 			</ul>
 			<div class="account-menu">
-				<a class="account-menu-enter" href="#">Вход</a>
+				<a class="account-menu-enter account-menu-enter-disabled" href="#">Вход</a>
 			</div>
 		</div>
 	</div>
 
+	<div class="login-popup">
+		Здесь будет форма логина
+	</div>
+
 	<div class="layout-center-wrapper">
-		<div class="logo"><a href="#">Barbershop Borodinski</a></div>
+		<div class="logo"><a href="#">Barbershop Borodinski</a>
+		</div>
 		<ul class="features">
 			<li>
 				<div class="feature-title">Быстро</div>
@@ -33,7 +46,7 @@
 			</li>
 			<li>
 				<div class="feature-title">Круто</div>
-				<p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
+				<p>Забудьте, как вы стриглись раньше.<br>Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
 			</li>
 			<li>
 				<div class="feature-title">Дорого</div>
@@ -59,9 +72,15 @@
 				<div class="index-section-title">Фотогалерея</div>
 				<div class="gallery">
 					<div class="gallery-items">
-						<div class="gallery-item"><img src="" alt="Интерьер"></div>
-						<div class="gallery-item"><img src="" alt="Интерьер"></div>
-						<div class="gallery-item"><img src="" alt="Интерьер"></div>
+						<div class="gallery-item">
+							<img src="" alt="Интерьер">
+						</div>
+						<div class="gallery-item">
+							<img src="" alt="Интерьер">
+						</div>
+						<div class="gallery-item">
+							<img src="" alt="Интерьер">
+						</div>
 					</div>
 					<div class="gallery-controls">
 						<button class="btn btn-prev">Назад</button>
@@ -75,14 +94,15 @@
 			<div class="index-left-column">
 				<div class="index-section-title">Контактная информация</div>
 				<div class="contacts-address">
-					<p><strong>Barbershop «Borodinski»</strong></p>
+					<p><strong>Barbershop «Borodinski»</strong>
+					</p>
 					<p>Адрес: г. Москва, ул. Собаки Павлова, д. 13</p>
 					<p>Телефон: +7 (495) 666-02-666</p>
 				</div>
 				<div class="contacts-work-time">
 					<p>Время работы:
-						<br> пн — пт: с 10:00 до 22:00
-						<br> сб — вс: с 10:00 до 19:00</p>
+						<br>пн — пт: с 10:00 до 22:00
+						<br>сб — вс: с 10:00 до 19:00</p>
 				</div>
 				<a href="#" class="btn">Как проехать</a>
 				<a href="#" class="btn">Обратная связь</a>
@@ -119,7 +139,8 @@
 				<a href="http://instagram.com" class="btn-social btn-social-inst"></a>
 			</div>
 			<div class="copyright">
-				<strong>Дизайн сайта:</strong><br>
+				<strong>Дизайн сайта:</strong>
+				<br>
 				<a class="btn" href="http://glukhanko.ru/">glukhanko.ru</a>
 			</div>
 		</div>
