--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Nerds</title>
+	<title>Barber Borodinsky</title>
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body class="shop-page">
