--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</li>
 				<li><a href="#">Новости</a>
 				</li>
-				<li><a href="#">Прайс-лист</a>
+				<li><a href="inner.html">Прайс-лист</a>
 				</li>
 				<li><a href="#">Магазин</a>
 				</li>
@@ -42,9 +42,6 @@
 			<label><input type="checkbox" name="remember"> Запомните меня</label>
 			<input type="submit" value="Войти">
 		</form>
-
-<!--		https://htmlacademy.ru/demos/15#step28-->
-
 	</div>
 
 	<div class="layout-center-wrapper">
@@ -114,6 +111,7 @@
 			</div>
 			<div class="index-column index-right-column">
 				<div class="index-section-title">Записаться</div>
+				<p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
 				<form action="#" method="post" class="order-form">
 					<fieldset>
 						<input type="text" name="date" placeholder="Дата">
@@ -131,19 +129,19 @@
 		</div>
 	</div>
 	<div class="footer">
-		<div class="layot-center-wrapper">
-			<div class="contacts-address">
-				<strong>Barbershop «Borodinski»</strong>
+		<div class="layout-center-wrapper">
+			<div class="footer-column contacts-address">
+				<p><strong>Barbershop «Borodinski»</strong></p>
 				<p>Адрес: г. Москва, ул. Собаки Павлова, д. 13</p>
 				<p>Телефон: +7 (495) 666-02-666</p>
 			</div>
-			<div class="social-buttons">
+			<div class="footer-column social-buttons">
 				<strong>Давайте дружить!</strong>
 				<a href="http://vk.com" class="btn-social btn-social-vk"></a>
 				<a href="http://facebook.com" class="btn-social btn-social-fb"></a>
 				<a href="http://instagram.com" class="btn-social btn-social-inst"></a>
 			</div>
-			<div class="copyright">
+			<div class="footer-column copyright">
 				<strong>Дизайн сайта:</strong>
 				<br>
 				<a class="btn" href="http://glukhanko.ru/">glukhanko.ru</a>
