--- a/inner.html
+++ b/inner.html
@@ -14,13 +14,13 @@
 	<div class="header">
 		<div class="layout-center-wrapper">
 			<ul class="top-menu">
-				<li><a href="#">Главная</a>
+				<li><a href="index.html">Главная</a>
 				</li>
-				<li><a class="active" href="#">Информация</a>
+				<li><a href="#">Информация</a>
 				</li>
 				<li><a href="#">Новости</a>
 				</li>
-				<li><a href="#">Прайс-лист</a>
+				<li><a class="active" href="#">Прайс-лист</a>
 				</li>
 				<li><a href="#">Магазин</a>
 				</li>
@@ -69,19 +69,19 @@
 	</div>
 
 	<div class="footer">
-		<div class="layot-center-wrapper">
-			<div class="contacts-address">
+		<div class="layout-center-wrapper">
+			<div class="footer-column contacts-address">
 				<strong>Barbershop «Borodinski»</strong>
 				<p>Адрес: г. Москва, ул. Собаки Павлова, д. 13</p>
 				<p>Телефон: +7 (495) 666-02-666</p>
 			</div>
-			<div class="social-buttons">
+			<div class="footer-column social-buttons">
 				<strong>Давайте дружить!</strong>
 				<a href="http://vk.com" class="btn-social btn-social-vk"></a>
 				<a href="http://facebook.com" class="btn-social btn-social-fb"></a>
 				<a href="http://instagram.com" class="btn-social btn-social-inst"></a>
 			</div>
-			<div class="copyright">
+			<div class="footer-column copyright">
 				<strong>Дизайн сайта:</strong>
 				<br>
 				<a class="btn" href="http://glukhanko.ru/">glukhanko.ru</a>
