Доделана страница прайса

--- a/shop.html
+++ b/shop.html
@@ -5,8 +5,148 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Barber Borodinsky</title>
 	<link href="css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=cyrillic-ext,cyrillic">
 </head>
-<body class="shop-page">
-	Текстовый текст
+<body class="inner-page">
+	<div class="header">
+		<div class="layout-center-wrapper">
+			<ul class="top-menu">
+				<li><a href="index.html">Главная</a>
+				</li>
+				<li><a href="#">Информация</a>
+				</li>
+				<li><a href="#">Новости</a>
+				</li>
+				<li><a class="active" href="#">Прайс-лист</a>
+				</li>
+				<li><a href="#">Магазин</a>
+				</li>
+				<li><a href="#">Контакты</a>
+				</li>
+			</ul>
+			<div class="account-menu">
+				<a class="account-menu-enter account-menu-enter-disabled" href="#">Вход</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="layout-center-wrapper">
+		<div class="page-title">
+			<h1>Barbershop Borodinski — прайс-лист</h1>
+		</div>
+		<div class="inner-menu">
+			<ul>
+				<li>
+					<a href="index.html">Главная</a>
+				</li>
+				<li>
+					<a href="index.html">Магазин</a>
+				</li>
+				<li>
+					Средства для ухода
+				</li>
+			</ul>
+		</div>
+		<div class="inner-content clearfix">
+			<div class="filters">
+				<div class="manufacturer">
+					<h3>Производители</h3>
+					<ul>
+						<li>
+							<div class="manufacturer-checkbox">
+								<input type="checkbox" checked name="baxter" id="baxter">
+								<label for="baxter"></label>
+							</div>
+							<label for="baxter">
+								BAXTER OF CALIFORNIA
+							</label>
+						</li>
+						<li>
+							<div class="manufacturer-checkbox">
+								<input type="checkbox" name="natty" id="natty">
+								<label for="natty"></label>
+							</div>
+							<label for="natty">
+								NATTY
+							</label>
+						</li>
+						<li>
+							<div class="manufacturer-checkbox">
+								<input type="checkbox" checked name="suavecito" id="suavecito">
+								<label for="suavecito"></label>
+							</div>
+							<label for="suavecito">
+								SUAVECITO
+							</label>
+						</li>
+						<li>
+							<div class="manufacturer-checkbox">
+								<input type="checkbox" name="malin" id="malin">
+								<label for="malin"></label>
+							</div>
+							<label for="malin">
+								MALIN+GOETZ
+							</label>
+						</li>
+						<li>
+							<div class="manufacturer-checkbox">
+								<input type="checkbox" name="murray" id="murray">
+								<label for="murray"></label>
+							</div>
+							<label for="murray">
+								MURRAY'S
+							</label>
+						</li>
+						<li>
+							<div class="manufacturer-checkbox">
+								<input type="checkbox" checked name="american" id="american">
+								<label for="american"></label>
+							</div>
+							<label for="american">
+								AMERICAN CREW
+							</label>
+						</li>
+					</ul>
+				</div>
+				<div class="group">
+					<h3>Группы товаров</h3>
+					<ul>
+						<li>
+							<div class="group-radio">
+								<input type="radio" checked name="group"  id="devices">
+								<label for="devices"></label>
+							</div>
+							<label for="devices">
+								БРИТВЕННЫЕ ПРИНАДЛЕЖНОСТИ
+							</label>
+						</li>
+						<li>
+							<div class="group-radio">
+								<input type="radio" name="group" id="care">
+								<label for="care"></label>
+							</div>
+							<label for="care">
+								СРЕДСТВА ДЛЯ УХОДА
+							</label>
+						</li>
+						<li>
+							<div class="group-radio">
+								<input type="radio" name="group" id="accessories">
+								<label for="accessories"></label>
+							</div>
+							<label for="accessories">
+								АКСЕССУАРЫ
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="items">
+
+				<div class="navigation">
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
