--- a/inner.html
+++ b/inner.html
@@ -37,34 +37,55 @@
 		<div class="page-title">
 			<h1>Barbershop Borodinski — прайс-лист</h1>
 		</div>
+		<div class="inner-menu">
+			<ul>
+				<li>
+					<a href="index.html">Главная</a>
+				</li>
+				<li>
+					Прайс-лист
+				</li>
+			</ul>
+		</div>
 		<div class="inner-content">
 			<div class="mega-title">
 				<h2>Истинно мужская классика</h2>
 			</div>
-			<h2>Мы используем только лучшие средства:</h2>
-			<ul class="custom-list-1">
-				<li>Baxter of California</li>
-				<li>Mr Natty</li>
-				<li>Suavecito</li>
-				<li>Malin+Goetz</li>
-			</ul>
-			<h2>Несколько слов о нас:</h2>
-			<p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
-			<h2>Цены на услуги наших мастеров:</h2>
-			<table class="prices">
-				<tr>
-					<th>Стрижка</th>
-					<td>1500 р.</td>
-				</tr>
-				<tr>
-					<th>Стрижка бороды</th>
-					<td>500 р.</td>
-				</tr>
-				<tr>
-					<th>Накрутка усов</th>
-					<td>350 р.</td>
-				</tr>
-			</table>
+			<div class="inner-left-column">
+				<h2>Мы используем только лучшие средства:</h2>
+				<ul class="custom-list-1">
+					<li>Baxter of California</li>
+					<li>Mr Natty</li>
+					<li>Suavecito</li>
+					<li>Malin+Goetz</li>
+				</ul>
+			</div>
+			<div class="inner-right-column">
+				<h2>Цены на услуги наших мастеров:</h2>
+				<table class="prices">
+					<tr>
+						<th>Стрижка</th>
+						<td>1500 р.</td>
+					</tr>
+					<tr>
+						<th>Стрижка бороды</th>
+						<td>500 р.</td>
+					</tr>
+					<tr>
+						<th>Накрутка усов</th>
+						<td>350 р.</td>
+					</tr>
+				</table>
+			</div>
+			<div class="inner-about">
+					<h2>Несколько слов о нас:</h2>
+				<div class="inner-about-left">
+					<p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас — это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+				</div>
+				<div class="inner-about-right">
+					<p>НАША МАСТЕРСКАЯ РАСПОЛОЖЕНА В ЦЕНТРЕ ГОРОДА, ПОЭТОМУ СДЕЛАТЬ СТИЛЬНУЮ СТРИЖКУ МОЖНО В ЛЮБОЕ ВРЕМЯ, ДАЖЕ В ОБЕДЕННЫЙ ПЕРЕРЫВ. ЗДЕСЬ ВЫ МОЖЕТЕ ПОГРУЗИТЬСЯ В УДОБНУЮ ДЛЯ ВАС АТМОСФЕРУ, ЧУВСТВОВАТЬ СЕБЯ КОМФОРТНО И СВОБОДНО!</p>
+				</div>
+			</div>
 		</div>
 	</div>
 
