Начата страница магазина, остался блок итемов

--- a/shop.html
+++ b/shop.html
@@ -17,9 +17,9 @@
 				</li>
 				<li><a href="#">Новости</a>
 				</li>
-				<li><a class="active" href="#">Прайс-лист</a>
+				<li><a href="inner.html">Прайс-лист</a>
 				</li>
-				<li><a href="#">Магазин</a>
+				<li><a class="active" href="#">Магазин</a>
 				</li>
 				<li><a href="#">Контакты</a>
 				</li>
@@ -32,7 +32,7 @@
 
 	<div class="layout-center-wrapper">
 		<div class="page-title">
-			<h1>Barbershop Borodinski — прайс-лист</h1>
+			<h1>Barbershop Borodinski — магазин</h1>
 		</div>
 		<div class="inner-menu">
 			<ul>
