--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</li>
 				<li><a href="inner.html">Прайс-лист</a>
 				</li>
-				<li><a href="#">Магазин</a>
+				<li><a href="shop.html">Магазин</a>
 				</li>
 				<li><a href="#">Контакты</a>
 				</li>
