Закончен, но не адаптивен, и очень приметивен

--- a/shop.html
+++ b/shop.html
@@ -141,10 +141,131 @@
 					</ul>
 				</div>
 			</div>
-			<div class="items">
-
-				<div class="navigation">
+			<div class="items-contaner">
+				<div class="items clearfix">
+					<div class="item">
+						<div class="info">
+							<a href="#"></a>
+						</div>
+						<a href="#">
+							<img src="img/item2.jpg">
+						</a>
+						<p>НАБОР ДЛЯ ПУТЕШЕСТВИЙ<br>
+BAXTER OF CALIFORNIA</p>
+						<div class="cost clearfix">
+							<span>2 900 руб.</span>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
+					<div class="item">
+						<div class="info">
+							<a href="#"></a>
+						</div>
+						<a href="#">
+							<img src="img/item1.jpg">
+						</a>
+						<p>УВЛАЖНЯЮЩИЙ КОНДИЦИОНЕР<br>
+BAXTER OF CALIFORNIA</p>
+						<div class="cost clearfix">
+							<span>750 руб.</span>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
+					<div class="item">
+						<div class="info">
+							<a href="#"></a>
+						</div>
+						<a href="#">
+							<img src="img/item3.jpg">
+						</a>
+						<p>ГЕЛЬ ДЛЯ ВОЛОС<br>
+SAUECITO</p>
+						<div class="cost clearfix">
+							<span>290 руб.</span>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
+					<div class="item">
+						<div class="info">
+							<a href="#"></a>
+						</div>
+						<a href="#">
+							<img src="img/item4.jpg">
+						</a>
+						<p>ГЛИНА ДЛЯ УКЛАДКИ ВОЛОС<br>
+AMERICAN CREW</p>
+						<div class="cost clearfix">
+							<span>500 руб.</span>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
+					<div class="item">
+						<div class="info">
+							<a href="#"></a>
+						</div>
+						<a href="#">
+							<img src="img/item5.jpg">
+						</a>
+						<p>ГЕЛЬ ДЛЯ БРИТЬЯ<br>
+AMERICAN CREW</p>
+						<div class="cost clearfix">
+							<span>300 руб.</span>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
+					<div class="item">
+						<div class="info">
+							<a href="#"></a>
+						</div>
+						<a href="#">
+							<img src="img/item6.jpg">
+						</a>
+						<p>НАБОР ДЛЯ БРИТЬЯ<br>
+BAXTER OF CALIFORNIA</p>
+						<div class="cost clearfix">
+							<span>3 900 руб.</span>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
 				</div>
+				<div class="navigation">
+					<ul>
+						<li>
+							<button class="btn">1</button>
+						</li>
+						<li>
+							<button class="btn active">2</button>
+						</li>
+						<li>
+							<button class="btn">3</button>
+						</li>
+						<li>
+							<button class="btn">4</button>
+						</li>
+					</ul>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="footer">
+		<div class="layout-center-wrapper">
+			<div class="footer-column contacts-address">
+				<strong>Barbershop «Borodinski»</strong>
+				<p>Адрес: г. Москва, ул. Собаки Павлова, д. 13</p>
+				<p>Телефон: +7 (495) 666-02-666</p>
+			</div>
+			<div class="footer-column social-buttons">
+				<strong>Давайте дружить!</strong>
+				<a href="http://vk.com" class="btn-social btn-social-vk"></a>
+				<a href="http://facebook.com" class="btn-social btn-social-fb"></a>
+				<a href="http://instagram.com" class="btn-social btn-social-inst"></a>
+			</div>
+			<div class="footer-column copyright">
+				<strong>Дизайн сайта:</strong>
+				<br>
+				<a class="btn" href="http://glukhanko.ru/">glukhanko.ru</a>
 			</div>
 		</div>
 	</div>
